--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 			</ul>
 
 			<p>
-				Support us on Venmo<br>
+				Support us on <a href="https://account.venmo.com/u/sliderstrombone">Venmo</a><br>
 				<a href="https://www.instagram.com/sliderstrombone">Instagram</a>
 			</p>
 
 		</div>
 
 	</body>
+
 </html>
