contact form link

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			</ul>
 
 			<p>
+				For <a href="https://forms.gle/K97QdjDd6wyjv5su9">booking and contact</a><br>
 				Support us on <a href="https://account.venmo.com/u/sliderstrombone">Venmo</a><br>
 				<a href="https://www.instagram.com/sliderstrombone">Instagram</a>
 			</p>
@@ -39,3 +40,4 @@
 	</body>
 
 </html>
+
